--- a/index.html
+++ b/index.html
@@ -1,1 +1,14 @@
-<h1>Hello World</h1>
+<!DOCTYPE html>
+<html>
+<head>
+    <meta charset='utf-8'>
+    <meta http-equiv='X-UA-Compatible' content='IE=edge'>
+    <title>Halo mọi người :< </title>
+    <meta name='viewport' content='width=device-width, initial-scale=1'>
+    <link rel='stylesheet' type='text/css' media='screen' href='main.css'>
+    <script src='main.js'></script>
+</head>
+<body>
+    <h1>Trang web này làm cảnh thui ạ</h1>
+</body>
+</html>>
